--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "request": "^2.88.2"
+  },
+    "engines": {
+    "node": "12.16.2"
   }
 }
